made some good changes for the website change calculator

--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
             <input type="number" id="amount-received" placeholder="Enter amount received">
         </div>
         <button id="calculate-change">Calculate Change</button>
-        <div id="changeOutput">
-            <p id="dollars-output">Dollars: 0</p>
-            <p id="quarters-output">Quarters: 0</p>
-            <p id="dimes-output">Dimes: 0</p>
-            <p id="nickels-output">Nickels: 0</p>
-            <p id="pennies-output">Pennies: 0</p>
-        </div>
+        <div id="changeOutput"></div>
     </main>
+    <footer>
+        <button id="show-total-change">Show Total Change</button>
+        <p id="totalChangeOutput">Total Change: $0.00</p>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
