skeleton built all tests pass time to make pretty!

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         </div>
         <button id="calculate-change">Calculate Change</button>
         <div id="changeOutput"></div>
+        <p id="dollars-output"></p>
+        <p id="quarters-output"></p>
+        <p id="dimes-output"></p>
+        <p id="nickels-output"></p>
+        <p id="pennies-output"></p>
     </main>
     <footer>
         <button id="show-total-change">Show Total Change</button>
