new changes from the spacing and test giving the numbers names!

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
         </div>
         <button id="calculate-change">Calculate Change</button>
         <div id="changeOutput"></div>
-        <p id="dollars-output"></p>
-        <p id="quarters-output"></p>
-        <p id="dimes-output"></p>
-        <p id="nickels-output"></p>
-        <p id="pennies-output"></p>
+        <p id="dollars-output" class="test-output hidden"></p>
+        <p id="quarters-output" class="test-output hidden"></p>
+        <p id="dimes-output" class="test-output hidden"></p>
+        <p id="nickels-output" class="test-output hidden"></p>
+        <p id="pennies-output" class="test-output hidden"></p>
+        <p id="dollars-display"></p>
+        <p id="quarters-display"></p>
+        <p id="dimes-display"></p>
+        <p id="nickels-display"></p>
+        <p id="pennies-display"></p>
     </main>
     <footer>
         <button id="show-total-change">Show Total Change</button>
