made foundations of page and changed the todo readme

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <p id="dimes-output" class="test-output hidden"></p>
         <p id="nickels-output" class="test-output hidden"></p>
         <p id="pennies-output" class="test-output hidden"></p>
+        
+        <!-- New button to redirect to Cappy Page -->
+        <button id="cappyButton">
+            <img src="path/to/button_image.jpg" alt="Button Image" style="width: 20px; height: 20px; vertical-align: middle;">
+            Go to Cappy Page
+        </button>
     </main>
     <footer>
         <button id="show-total-change">Show Total Change</button>
@@ -48,4 +54,3 @@
     </footer>
     <script src="main.js"></script>
 </body>
-</html>
