--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <header>
-        <h1>Change Calculator</h1>
+        <h1>Change Calculator</h1> 
+        <div class="currency-choice">
+            <a href="index.html"><img src="assets\images\dollarIMGIcon.png" alt="USD" id="usdButton"></a> 
+            <a href="cappy.html"><img src="assets\images\cappyiconimg.png" alt="Doubloons" id="doubloonsButton"></a>
+        </div>
     </header>
     <main>
         <div class="input-section">
@@ -41,12 +45,6 @@
         <p id="dimes-output" class="test-output hidden"></p>
         <p id="nickels-output" class="test-output hidden"></p>
         <p id="pennies-output" class="test-output hidden"></p>
-        
-        <!-- New button to redirect to Cappy Page -->
-        <button id="cappyButton">
-            <img src="path/to/button_image.jpg" alt="Button Image" style="width: 20px; height: 20px; vertical-align: middle;">
-            Go to Cappy Page
-        </button>
     </main>
     <footer>
         <button id="show-total-change">Show Total Change</button>
